--- a/frontend/users.css
+++ b/frontend/users.css
@@ -75,12 +75,22 @@ main {
 }
 
 .profile {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
-    background-color: gray;
+    background-color: #fff;
+    border: 1px solid #ff7200;
 }
-
+#welcome-name{
+    color: #23ea11;
+}
+#current-date-time{
+    font-size: large;
+    font-family: Elephant;
+}
+.currentTime{
+    color: blue;
+}
 .profileSection {
     display: flex;
     gap: 15px;
