--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -295,27 +295,116 @@ table tr:hover {
 .projects :hover{
     background-color: #06065a;
 }
-.modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    top: 0;
+.modal, .dynamic-container {
+    width: 90%;
+    margin: 15vh auto 0px auto;
+    background-color: #fefefe;
+    border-radius: 15px;
+    box-shadow: 2px 2px 2px 2px rgba(102, 102, 255, 0.2);
+  }
+  
+  .modal-content {
+    margin: 2% auto;
+    padding: 20px;
+    border: none;
+    width: 90%;
+    height: 20vh;
+  }
+  
+  .buttons_container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     width: 100%;
     height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    padding-top: 60px;
-}
-
-.modal-content {
+  }
+  
+  .buttons_container button {
+    background-color: hsl(240, 100%, 70%);
+    color: whitesmoke;
+    font-weight: bold;
+    font-size: 15px;
+    border: none;
+    padding: 2%;
+    border-radius: 10px;
+    transition: all 0.5s;
+  }
+  
+  .buttons_container button:hover {
+      cursor: pointer;
+      background-color: hsl(240, 100%, 50%);
+  }
+  
+  .dynamic-container {
+      background-color: #fefefe;
+      margin-top: 5vh;
+      margin-bottom: 0px;
+      padding: 20px;
+  }
+  
+  .header-part{
+      width: auto;
+      height: 45px;
+      display: flex;
+      border-bottom: 1px solid hsl(240, 100%, 70%);
+  }
+  
+  .promt-user-conatainer, .promt-user-conatainer1 {
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 1;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+  }
+  
+  .create-new-project-form, .create-new-project-form1 {
     background-color: #fefefe;
-    margin: 5% auto;
+    border-radius: 20px;
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
+    width: 60%;
+    height: 50%;
+    display: grid;
+    align-items: center;
+    grid-template-rows: repeat(1fr);
+  }
+  
+  .create-new-project-form input {
+    padding-left: 3%;
+    height: 90%;
+    border: 1px solid hsla(240, 100%, 70%, 0.322);
+  }
+  
+  .buttons {
+    width: auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  
+  .buttons input {
+    border: none;
+    padding: 2% 4%;
+    color: #fefefe;
+    font-weight: bold;
+    background-color: #6666ff;
+    border-radius: 10px;
+    height: 70%;
+    transition: all 0.5s;
+  }
+  
+  .buttons input:hover {
+    background-color: hsl(240, 100%, 50%);
+    cursor: pointer;
+  }
+  
+  .buttons input:active {
+    opacity: 0.8;
+  }
 
 .close {
     color: #aaa;
