--- a/frontend/users.css
+++ b/frontend/users.css
@@ -96,6 +96,23 @@ main {
     gap: 15px;
     align-items: center;
 }
+.notificationArea{
+    display: flex;
+}
+.notificationArea > p{
+    background-color: red;
+    padding: 3px;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    text-align: center;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -10px;
+    margin-right: -5px;
+}
 
 .logo {
     margin-top: 10px;
